--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.App{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.controls{
+        /* margin-right: auto; */
+        /* margin-top:20rem;
+        left:0; */
+        width: 40vw;
+        align-items: flex-start;       
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box{
+        width:40vw;
+        height:50vh;
+        color:white;
+        text-align: center;
+        padding:120px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-input{
+        border: 1px 2px 3px black;
 }
